--- a/blogapp/templates/main.html
+++ b/blogapp/templates/main.html
@@ -40,7 +40,7 @@
 		</nav>
 
 		<div class = "page-header centerdiv">
-			<h1>Blog Articles One!</h1>
+			<h1>Blog Articles Two!</h1>
 		</div>
 
 		<div class = "blog well">
